<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditInfoFragment"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolbarColoredBackArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="100dp"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:text="@string/text_title_title"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:singleLine="true"
            android:maxLines="1"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/edit_text_title_hint"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/etTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_content_title"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/txtContent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/edit_text_content_hint"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPhotoCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/etContent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/text_photo_count_0_to_3_format"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPhotoCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/rvPhoto"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_location_title"/>

        <com.example.testforwemo.view.custom.CustomMapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#EDFFD9"
            app:layout_constraintTop_toBottomOf="@+id/txtMap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgPin"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toBottomOf="@+id/txtMap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            android:translationY="-15dp"
            android:src="@mipmap/pin"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/mapView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/btn_save"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/btnSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/btn_cancel"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>